--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         <activity
             android:name=".chequeoClases"
             android:exported="false" />
+        <activity android:name=".abcAulas"
+            android:exported="false"/>
         <activity
             android:name=".abcMaestros"
             android:exported="false" />
