--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.ProyectoAplicacionChecador"
         tools:targetApi="31">
         <activity
+            android:name=".ReporteSemanal"
+            android:exported="false" />
+        <activity
             android:name=".abcAcademia"
             android:exported="false" />
         <activity
