--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/logotec"
+        android:label="Chequeo Clases"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoAplicacionChecador"
         tools:targetApi="31">
